tests/parse-fail/fn_missing_abi.fl.0.exp
Error: fn_missing_abi.fl(3,23): Expected function ABI string, but got '(' 
pub mod fn_missing_abi {
    pub struct FnMissingAbi {
        pub a : fn ext() -> unit;
                      ^           
    }
}
