tests/parse-fail/fn_missing_abi.fl
pub mod fn_missing_abi {
    pub struct FnMissingAbi {
        pub a : fn ext() -> unit;
    }
}
